Finished HTML section

--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,110 @@
-<!DOCTYPE html>
+</html><!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>DELI-VERY</title>
-    </head>
-    <body>
-        <h1>Hello World!!!</h1>
-    </body>
+  <head>
+    <title>DAAAYTOOONAAA</title>
+    <meta charset="utf-8"/>
+  </head>
+  <body>
+    <main>
+      <h1>Welcome to Flavortown</h1>
+      <!-- Section for viewing/choosing burgers -->
+      <section>
+        <h3>Select burger</h3>
+        <p>This is where you select burgers</p>
+        <p>
+          <table>
+            <thead>
+              <tr>
+                <th>Burger1</th>
+                <th>Burger2</th>
+                <th>Burger3</th>
+            </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn0.vox-cdn.com%2Fthumbor%2FYiPiP8BLj70i8o9O6TpGEVoUkLY%3D%2F0x444%3A7115x5187%2F1280x853%2Fcdn0.vox-cdn.com%2Fuploads%2Fchorus_image%2Fimage%2F49565113%2Fshutterstock_333689708.0.0.jpg&f=1"
+                       alt="borg"
+                       title="borg"
+                       height=200
+                       width=300/>
+              </td>
+              <td><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.DW2ow5Ehn8KL6HoxKWIyGwHaLH%26pid%3D15.1&f=1"
+                       alt="vegan burger"
+                       title="veggo borg"
+                       height=200
+                       width=300/>
+              </td>
+              <td><img src="https://www.bonbonweb.com/9958-image_produit/candy-burger-50g.jpg"
+                       alt="candy burger"
+                       title="fren hold up"
+                       height=200
+                       width=300/>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <ul>
+                  <li>750 kcal</li>
+                  <li>Contains gluten</li>
+                  <li>Contains lactose</li>
+                </ul>
+              </td>
+              <td>
+                <ul>
+                  <li>600 kcal</li>
+                  <li>vegan, no allergenes</li>
+                </ul>
+              </td>
+              <td>
+                  <ul>
+                    <li>It's good for you</li>
+                    <li>Contains: gelatine</li>
+                </ul>
+            </tr>
+          </table>
+      </section>
+      <!-- Section for entering info -->
+      <section>
+          <h3 >Delivery information</h3>
+          <p>
+            <label for="fullname" text-align="left">Full name</label><br>
+            <input type="text" id="fullname" name="fn" required="required" placeholder="First and last name"\>
+          </p>
+          <p>
+            <span><label for="emailaddress">E-mail address</label><br></span>
+            <input type="email" id="emailaddress" name="em" required="required" placeholder="E-mail address"\>
+          </p>
+          <p>
+            <label for="street">Street</label><br>
+            <input type="text" id="street" name="street" required="required" placeholder="Street name"\>
+          </p>
+          <p>
+            <label for="housenr" align="left">House number</label><br>
+            <input type="text" id="housenr" name="housenr" required="required" placeholder="House number"\>
+          </p>
+          <p>
+            <label for="genders">Choose gender</label><br>
+            <input type="radio" value="Male" name="genders">Male<br>
+            <input type="radio" value="Female" name="genders">Female<br>
+            <input type="radio" value="unspecified" name="genders" checked>Prefer not to specify<br>
+          <p>
+              <label for="recipient">Payment options:</label><br>
+              <select id="recipient" name="rcp">
+                <option>Credit card</option>
+                <option>Swish</option>
+                <option>Cash</option>
+              </select>
+              <br>
+              <br>
+              <button type="submit" style="vertical-align: center;"><img src="https://proxy.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F9%2F90%2FCheck_mark_23x20_02.svg%2F1081px-Check_mark_23x20_02.svg.png&f=1"
+                                                                         height="15px"
+                                                                         width="15px"> Place my order!</button>
+          </p>
+      </section>
+    </main>
+    <hr>
+    <footer>
+      &copy;2k19 duck
+    </footer>
+  </body>
 </html>
